--- a/readme.html
+++ b/readme.html
@@ -48,7 +48,7 @@
     </p>
 
     <h3 align="center">Frontend Development:</h3>
-    <p align="left">
+    <p align="center">
       <a href="https://www.w3schools.com/css/" target="_blank" rel="noreferrer">
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
@@ -91,8 +91,8 @@
       </a>
     </p>
 
-    <h3 align="left">Mobile App Development:</h3>
-    <p align="left">
+    <h3 align="center">Mobile App Development:</h3>
+    <p align="center">
       <a href="https://developer.android.com" target="_blank" rel="noreferrer">
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/android/android-original-wordmark.svg"
@@ -111,8 +111,8 @@
       </a>
     </p>
 
-    <h3 align="left">Database:</h3>
-    <p align="left">
+    <h3 align="center">Database:</h3>
+    <p align="center">
       <a href="https://www.mongodb.com/" target="_blank" rel="noreferrer">
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mongodb/mongodb-original-wordmark.svg"
@@ -151,8 +151,8 @@
       </a>
     </p>
 
-    <h3 align="left">Devops:</h3>
-    <p align="left">
+    <h3 align="center">Devops:</h3>
+    <p align="center">
       <a href="https://aws.amazon.com" target="_blank" rel="noreferrer">
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg"
@@ -175,8 +175,8 @@
       </a>
     </p>
 
-    <h3 align="left">Backend as a Service(BaaS):</h3>
-    <p align="left">
+    <h3 align="center">Backend as a Service(BaaS):</h3>
+    <p align="center">
       <a href="https://firebase.google.com/" target="_blank" rel="noreferrer">
         <img
           src="https://www.vectorlogo.zone/logos/firebase/firebase-icon.svg"
@@ -195,8 +195,8 @@
       </a>
     </p>
 
-    <h3 align="left">Framework:</h3>
-    <p align="left">
+    <h3 align="center">Framework:</h3>
+    <p align="center">
       <a href="https://www.djangoproject.com/" target="_blank" rel="noreferrer">
         <img
           src="https://raw.githubusercontent.com/devicons/devicon/master/icons/django/django-original.svg"
@@ -207,8 +207,8 @@
       </a>
     </p>
 
-    <h3 align="left">Software:</h3>
-    <p align="left">
+    <h3 align="center">Software:</h3>
+    <p align="center">
       <a href="https://www.blender.org/" target="_blank" rel="noreferrer">
         <img
           src="https://download.blender.org/branding/community/blender_community_badge_white.svg"
@@ -247,8 +247,8 @@
       </a>
     </p>
 
-    <h3 align="left">Static Site Generators:</h3>
-    <p align="left">
+    <h3 align="center">Static Site Generators:</h3>
+    <p align="center">
       <a href="https://www.gatsbyjs.com/" target="_blank" rel="noreferrer">
         <img
           src="https://www.vectorlogo.zone/logos/gatsbyjs/gatsbyjs-icon.svg"
@@ -259,8 +259,8 @@
       </a>
     </p>
 
-    <h3 align="left">Game Engines:</h3>
-    <p align="left">
+    <h3 align="center">Game Engines:</h3>
+    <p align="center">
       <a href="https://unity.com/" target="_blank" rel="noreferrer">
         <img
           src="https://www.vectorlogo.zone/logos/unity3d/unity3d-icon.svg"
@@ -271,8 +271,8 @@
       </a>
     </p>
 
-    <h3 align="left">Automation:</h3>
-    <p align="left">
+    <h3 align="center">Automation:</h3>
+    <p align="center">
       <a href="https://ifttt.com/" target="_blank" rel="noreferrer">
         <img
           src="https://www.vectorlogo.zone/logos/ifttt/ifttt-ar21.svg"
@@ -291,8 +291,8 @@
       </a>
     </p>
 
-    <h3 align="left">Other:</h3>
-    <p align="left">
+    <h3 align="center">Other:</h3>
+    <p align="center">
       <a href="https://www.arduino.cc/" target="_blank" rel="noreferrer">
         <img
           src="https://cdn.worldvectorlogo.com/logos/arduino-1.svg"
